// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NarrativeStyleModal rendering should match snapshot when open in auto mode 1`] = `
<div>
  <div
    class="fixed inset-0 bg-black/70 z-50 flex items-center justify-center p-4 backdrop-blur-sm animate-fade-in"
  >
    <div
      class="bg-white border-4 border-stone-900 w-full max-w-2xl shadow-[8px_8px_0px_rgba(0,0,0,1)] max-h-[90vh] flex flex-col"
    >
      <div
        class="p-4 border-b-4 border-stone-900 bg-stone-900 flex justify-between items-center flex-shrink-0"
      >
        <h2
          class="text-xl font-black text-white flex items-center gap-3 uppercase tracking-tight"
        >
          <span
            data-testid="sparkles-icon"
          >
            Sparkles
          </span>
          Narrative Style Editor
        </h2>
        <button
          class="text-white/70 hover:text-white transition-colors p-1 hover:bg-white/10 rounded"
        >
          <span
            data-testid="x-icon"
          >
            X
          </span>
        </button>
      </div>
      <div
        class="p-5 space-y-5 overflow-y-auto flex-1"
      >
        <div
          class="grid grid-cols-2 gap-3"
        >
          <button
            class="p-4 border-3 text-left transition-all bg-stone-900 text-white border-stone-900 shadow-[4px_4px_0px_rgba(0,0,0,0.3)]"
          >
            <h3
              class="font-black uppercase text-sm"
            >
              Auto Mode
            </h3>
            <p
              class="text-xs mt-1 text-stone-300"
            >
              AI adapts to each scene automatically
            </p>
          </button>
          <button
            class="p-4 border-3 text-left transition-all bg-stone-100 text-stone-700 border-stone-300 hover:border-stone-700"
          >
            <h3
              class="font-black uppercase text-sm"
            >
              Custom Style
            </h3>
            <p
              class="text-xs mt-1 text-stone-500"
            >
              Define your preferred writing style
            </p>
          </button>
        </div>
      </div>
      <div
        class="p-4 border-t-4 border-stone-900 bg-stone-100 flex gap-3 flex-shrink-0"
      >
        <button
          class="flex-1 py-3 px-4 bg-white text-stone-700 font-black uppercase text-sm border-2 border-stone-300 hover:border-stone-900 transition-colors"
        >
          Cancel
        </button>
        <button
          class="flex-1 py-3 px-4 bg-stone-900 text-white font-black uppercase text-sm tracking-wide hover:bg-stone-700 transition-colors disabled:opacity-50 disabled:cursor-not-allowed flex items-center justify-center gap-2 border-2 border-stone-900"
        >
          Save
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`NarrativeStyleModal rendering should match snapshot when open in custom mode 1`] = `
<div>
  <div
    class="fixed inset-0 bg-black/70 z-50 flex items-center justify-center p-4 backdrop-blur-sm animate-fade-in"
  >
    <div
      class="bg-white border-4 border-stone-900 w-full max-w-2xl shadow-[8px_8px_0px_rgba(0,0,0,1)] max-h-[90vh] flex flex-col"
    >
      <div
        class="p-4 border-b-4 border-stone-900 bg-stone-900 flex justify-between items-center flex-shrink-0"
      >
        <h2
          class="text-xl font-black text-white flex items-center gap-3 uppercase tracking-tight"
        >
          <span
            data-testid="sparkles-icon"
          >
            Sparkles
          </span>
          Narrative Style Editor
        </h2>
        <button
          class="text-white/70 hover:text-white transition-colors p-1 hover:bg-white/10 rounded"
        >
          <span
            data-testid="x-icon"
          >
            X
          </span>
        </button>
      </div>
      <div
        class="p-5 space-y-5 overflow-y-auto flex-1"
      >
        <div
          class="grid grid-cols-2 gap-3"
        >
          <button
            class="p-4 border-3 text-left transition-all bg-stone-100 text-stone-700 border-stone-300 hover:border-stone-900"
          >
            <h3
              class="font-black uppercase text-sm"
            >
              Auto Mode
            </h3>
            <p
              class="text-xs mt-1 text-stone-500"
            >
              AI adapts to each scene automatically
            </p>
          </button>
          <button
            class="p-4 border-3 text-left transition-all bg-stone-700 text-white border-stone-800 shadow-[4px_4px_0px_rgba(0,0,0,0.3)]"
          >
            <h3
              class="font-black uppercase text-sm"
            >
              Custom Style
            </h3>
            <p
              class="text-xs mt-1 text-stone-300"
            >
              Define your preferred writing style
            </p>
          </button>
        </div>
        <div
          class="space-y-4"
        >
          <div
            class="flex gap-3 bg-stone-100 border-2 border-stone-300 p-3"
          >
            <span
              data-testid="info-icon"
            >
              Info
            </span>
            <div>
              <p
                class="text-xs font-bold uppercase tracking-wide text-stone-600"
              >
                How to describe your style
              </p>
              <p
                class="text-xs text-stone-600 mt-1 leading-relaxed"
              >
                Describe how you want the story to be told.
              </p>
            </div>
          </div>
          <div
            class="relative"
          >
            <textarea
              class="w-full bg-stone-50 border-3 border-stone-300 p-4 pr-12 text-sm text-stone-900 focus:border-stone-600 outline-none min-h-[120px] font-medium"
              placeholder="Describe your narrative style..."
            />
            <div
              class="absolute top-3 right-3"
            />
          </div>
          <button
            class="w-full py-3 bg-stone-800 text-white font-black uppercase tracking-wide hover:bg-stone-700 transition-colors disabled:opacity-50 disabled:cursor-not-allowed flex items-center justify-center gap-2 border-2 border-stone-900 shadow-[4px_4px_0px_rgba(0,0,0,0.2)]"
            disabled=""
          >
            <span
              data-testid="sparkles-icon"
            >
              Sparkles
            </span>
            Refine Style
          </button>
        </div>
      </div>
      <div
        class="p-4 border-t-4 border-stone-900 bg-stone-100 flex gap-3 flex-shrink-0"
      >
        <button
          class="flex-1 py-3 px-4 bg-white text-stone-700 font-black uppercase text-sm border-2 border-stone-300 hover:border-stone-900 transition-colors"
        >
          Cancel
        </button>
        <button
          class="flex-1 py-3 px-4 bg-stone-900 text-white font-black uppercase text-sm tracking-wide hover:bg-stone-700 transition-colors disabled:opacity-50 disabled:cursor-not-allowed flex items-center justify-center gap-2 border-2 border-stone-900"
          disabled=""
        >
          Save
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`NarrativeStyleModal rendering should match snapshot with custom style text 1`] = `
<div>
  <div
    class="fixed inset-0 bg-black/70 z-50 flex items-center justify-center p-4 backdrop-blur-sm animate-fade-in"
  >
    <div
      class="bg-white border-4 border-stone-900 w-full max-w-2xl shadow-[8px_8px_0px_rgba(0,0,0,1)] max-h-[90vh] flex flex-col"
    >
      <div
        class="p-4 border-b-4 border-stone-900 bg-stone-900 flex justify-between items-center flex-shrink-0"
      >
        <h2
          class="text-xl font-black text-white flex items-center gap-3 uppercase tracking-tight"
        >
          <span
            data-testid="sparkles-icon"
          >
            Sparkles
          </span>
          Narrative Style Editor
        </h2>
        <button
          class="text-white/70 hover:text-white transition-colors p-1 hover:bg-white/10 rounded"
        >
          <span
            data-testid="x-icon"
          >
            X
          </span>
        </button>
      </div>
      <div
        class="p-5 space-y-5 overflow-y-auto flex-1"
      >
        <div
          class="grid grid-cols-2 gap-3"
        >
          <button
            class="p-4 border-3 text-left transition-all bg-stone-100 text-stone-700 border-stone-300 hover:border-stone-900"
          >
            <h3
              class="font-black uppercase text-sm"
            >
              Auto Mode
            </h3>
            <p
              class="text-xs mt-1 text-stone-500"
            >
              AI adapts to each scene automatically
            </p>
          </button>
          <button
            class="p-4 border-3 text-left transition-all bg-stone-700 text-white border-stone-800 shadow-[4px_4px_0px_rgba(0,0,0,0.3)]"
          >
            <h3
              class="font-black uppercase text-sm"
            >
              Custom Style
            </h3>
            <p
              class="text-xs mt-1 text-stone-300"
            >
              Define your preferred writing style
            </p>
          </button>
        </div>
        <div
          class="space-y-4"
        >
          <div
            class="flex gap-3 bg-stone-100 border-2 border-stone-300 p-3"
          >
            <span
              data-testid="info-icon"
            >
              Info
            </span>
            <div>
              <p
                class="text-xs font-bold uppercase tracking-wide text-stone-600"
              >
                How to describe your style
              </p>
              <p
                class="text-xs text-stone-600 mt-1 leading-relaxed"
              >
                Describe how you want the story to be told.
              </p>
            </div>
          </div>
          <div
            class="relative"
          >
            <textarea
              class="w-full bg-stone-50 border-3 border-stone-300 p-4 pr-12 text-sm text-stone-900 focus:border-stone-600 outline-none min-h-[120px] font-medium"
              placeholder="Describe your narrative style..."
            >
              Present tense, cinematic style, focus on dialogue.
            </textarea>
            <div
              class="absolute top-3 right-3"
            />
          </div>
          <button
            class="w-full py-3 bg-stone-800 text-white font-black uppercase tracking-wide hover:bg-stone-700 transition-colors disabled:opacity-50 disabled:cursor-not-allowed flex items-center justify-center gap-2 border-2 border-stone-900 shadow-[4px_4px_0px_rgba(0,0,0,0.2)]"
          >
            <span
              data-testid="sparkles-icon"
            >
              Sparkles
            </span>
            Refine Style
          </button>
        </div>
      </div>
      <div
        class="p-4 border-t-4 border-stone-900 bg-stone-100 flex gap-3 flex-shrink-0"
      >
        <button
          class="flex-1 py-3 px-4 bg-white text-stone-700 font-black uppercase text-sm border-2 border-stone-300 hover:border-stone-900 transition-colors"
        >
          Cancel
        </button>
        <button
          class="flex-1 py-3 px-4 bg-stone-900 text-white font-black uppercase text-sm tracking-wide hover:bg-stone-700 transition-colors disabled:opacity-50 disabled:cursor-not-allowed flex items-center justify-center gap-2 border-2 border-stone-900"
          disabled=""
        >
          Save
        </button>
      </div>
    </div>
  </div>
</div>
`;
